[package]
name = "testing-actions"
version = "0.1.0"
edition = "2021"
description = "GitHub Actions-style declarative workflow engine for multi-platform test automation"
license = "MIT"
repository = "https://github.com/anthropics/testing-actions"

[lib]
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async trait support
async-trait = "0.1"

# Logging and OpenTelemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["tonic"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

# Template/expression evaluation (like ${{ env.VAR }})
handlebars = "6.0"
regex = "1.10"

# Process management for Node.js bridge
which = "6.0"

# HTTP client for Web bridge
reqwest = { version = "0.12", features = ["json"] }

# WebSocket client for agent control channel
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = "0.24"

# Async channels for event system
async-channel = "2.3"

# UUID for run IDs
uuid = { version = "1.10", features = ["v4"] }

# Hashing for content-addressed checkpoints
sha2 = "0.10"
hex = "0.4"

# Time/date handling
chrono = { version = "0.4", features = ["serde"] }

# For watching file changes (optional triggers)
notify = { version = "6.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.12"

[features]
default = []
file-triggers = ["notify"]
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]

[[example]]
name = "simple_workflow"
path = "examples/simple_workflow.rs"

[[example]]
name = "multi_platform_workflow"
path = "examples/multi_platform_workflow.rs"

[[example]]
name = "all_platforms"
path = "examples/all_platforms.rs"

[[example]]
name = "workflow_directory"
path = "examples/workflow_directory.rs"

[[bin]]
name = "testing-actions"
path = "src/bin/cli.rs"
